deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moopiew
  labels:
    app.kubernetes.io/part-of: moopiew
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
